[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/2DUI/Start.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_notification_short_digital_futuristic_beep_generic_008_53944.mp3.ogg" type="AudioStream" id=4]

[node name="Start" type="Control"]
modulate = Color( 0.109804, 0.780392, 0.780392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WFpanel" parent="." instance=ExtResource( 1 )]
border_color = Color( 1, 0.654902, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -560.0
margin_top = -26.5
margin_right = 560.0
margin_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Click Here 
(or press Enter)"
align = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[connection signal="finished" from="." to="." method="_on_Start_finished"]
[connection signal="gui_input" from="." to="." method="_on_Start_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
